tests/valid/definite/SetUnion_Valid_2.whiley
void System::main([string] args):
     xs = {1,2,3,4}
     ys = xs ∪ {5,1}
     print str(xs)
     xs = xs ∪ {6}
     print str(xs)
     print str(ys)
